--- a/i3/config
+++ b/i3/config
@@ -121,6 +121,9 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
+assign [class="Nautilus"] $workspace3
+for_window [class="Spotify"] move to workspace $workspace10
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -178,3 +181,5 @@ bindsym XF86AudioPrev exec playerctl previous
 
 # exec firefix
 exec google-chrome
+exec spotify
+exec nautilus
